[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agenteval"
version = "0.1.0"
description = "Lightweight evaluation framework for AI agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Atharva Joshi", email = "atharvaj2112@gmail.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["ai-agents", "evaluation", "benchmarking", "llm", "testing", "safety"]

dependencies = [
    "pydantic>=2.0",
    "tiktoken>=0.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
]

[project.urls]
Homepage = "https://github.com/atharvajoshi01/agenteval"
Repository = "https://github.com/atharvajoshi01/agenteval"
Issues = "https://github.com/atharvajoshi01/agenteval/issues"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
